argocd-main/resources/uat/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: farin-backend-svc
spec:
  type: ClusterIP
  selector:
    app: farin-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: rest
