argocd-main/resources/uat/backend/httprouter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-backend
  namespace: uat
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-resources
  hostnames:
  - farin.gw.k8s.sh.aban.io
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: farin-backend-svc
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
